# UHM

./: .gitignore  Cargo.toml  Skills.md  UHM_DESIGN.md  build.rs  uhm-bug-report.md
src/: build_info.rs  lib.rs  main.rs
src/db/: connection.rs  migrations.rs  mod.rs
src/mcp/: mod.rs  server.rs
src/models/: day.rs  exercise.rs  food_item.rs  meal_entry.rs  medication.rs  mod.rs  nutrition.rs  patient.rs  recipe.rs  recipe_component.rs  recipe_ingredient.rs  vital.rs
src/nutrition/: converter.rs  mod.rs  units.rs
src/tools/: days.rs  exercise.rs  food_items.rs  medications.rs  mod.rs  recipes.rs  reports.rs  status.rs  vitals.rs
